Integration with proxy